test/cli/scenarios_to_cli/other /scenario_validate_volume_whitelist/kyverno-test.yaml
name: validate-volumes-whitelist
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
- policy: validate-volumes-whitelist
  rule: validate-volumes-whitelist
  resource: test-volumes
  kind: Pod
  result: pass
